Upgrade PDFBox API to v2.0.8 (#333)