@@ -17,6 +17,7 @@
 package com.tom_roush.pdfbox.pdmodel.encryption;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.security.Provider;
 import java.security.Security;
 
@@ -53,7 +54,7 @@ public class SecurityProvider
                 Security.addProvider(new BouncyCastleProvider());
                 Class<Provider> providerClass = (Class<Provider>) Class
                     .forName("org.bouncycastle.jce.provider.BouncyCastleProvider");
-                provider = providerClass.newInstance();
+                provider = providerClass.getDeclaredConstructor().newInstance();
             }
             catch (ClassNotFoundException ex)
             {
@@ -64,6 +65,14 @@ public class SecurityProvider
                 throw new IOException(ex);
             }
             catch (IllegalAccessException ex)
+            {
+                throw new IOException(ex);
+            }
+            catch (NoSuchMethodException ex)
+            {
+                throw new IOException(ex);
+            }
+            catch (InvocationTargetException ex)
             {
                 throw new IOException(ex);
             }
